Updated main.java
Also changed the name of the associated FXML file